<resources>
    <string name="app_name">Ръководство</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="TextFirstPage">Интердисциплинарно ръководство на качество S3 за ранно откриване, диагностициране и терапия на различните стадии на рак на простатата. </string>
    <string name="this_is_new">Това е ново

\n \n Важни промени при актуализация 2018 на ръководството (Версия 5) Версия  5.1 (Mai 2019). Направени са основно редакторски преработки и промени на номерацията на главите. Глави 1.12 -1.14 стават Глава 2. Глава 7 „Рехабилитация и последваща грижа“ са разделени на глава 8 Rehabilitation и глава 9 „Последваща грижа“. Преработка на информацията за във връзка с кофликта на интереси -  информацията от ръководните принципи е взета, защото е по-подробна.

\n \n
        Версия 5.0 (Април 2018)
\n Следните промени са направени по съдържанието
\n \n
\n a. При първоначалната диагностика при негативен резултат от биопсията се препоръчва образно изследване с помощта на МРТ и съответно последваща целева плюс системна биопсия, чийто резултат определя по-нататъшните инвазивни интервенции и образни диагностики (виж препоръки 5.13, 5.14, 5.17)
\n b. Преди решението за активно наблюдение е необходимо да се направи образна диагностика с MRT (виж препоръки 5.18., 6.9.).
\n c. Лъчетерапията би трябвало да се проведе съвместно с имиджова диагностика (виж препоръки 6.19., 6.45.).
\n d. При рак на прастатата, който е навлязал в лимфните възли, след радикална простатектомия и лимфаденоктомия може да се предложи съпътстваща лъчева терапия в комбинация с хормонална (виж препоръка 6.61.).
\n e.При хормоночувствителен метастазирал рак на простатата би трябвало допълнително към хормоналната терапия да се препоръча химиотерапия с Docetaxel или допълваща антихормонална терапия с Abirateron (off-Label) (виж препоръки 7.17., 7.19., 7.20., 7.21.).
\n f. При кастрационно-резистентен прогресиращ рак на простатата би трябвало при безсимптомни пациенти, съответно би могло и при симптоматични пациенти, като основна терапия да се предложи Abirateron или Enzalutamid (виж препоръки 7.32., 7.33.).
\n g.При кастрационно-резистентен, прогресиращ рак на простатата би могло, след изчерпване на предложените възможности за терапия, да се опита терапия с Lutetium-177-PSMA (виж препоръки 7.45.).
\n h. При хормонално наивен стадии би трябвало за превенция на усложнения с костни метастази да не се използва Bisphosphonate (виж препоръка 7.50.).
\n i. По време на хормонална терапия би трябвало да се вземат рехабилитационни мерки с включване на  кинезотерапия (виж препоръка 8.8.).
\n Подробен преглед на промените по препоръките/твърденията в сравнение с предишната версия 3 (2016) се намира в приложение 15.2. на дългата версия.
</string>
    <string name="title_6_4_4"><b>6.4.4 Лимфаденектомия</b></string>
    <string name="title_6_4_5_1"><b>6.4.5.1 Значение на HIFU</b></string>
    <string name="text6_50">Прогностичната полза от
лимфаденектомия при пациенти с
локално напреднал рак на
простатата не е доказана.
Тазовата лимфаденектомия
осигурява актуална информация
за решението за придружаваща
терапия.</string>
    <string name="text6_51">При пациенти с рак на простатата
от по-висок рисков профил би
трябвало да им се предложи
заедно с радикалната
простатектомия разширена тазова
лимфаденектомия.</string>
    <string name="text6_52">HIFU (Високо иннтензивен
фокусиран ултразвук), IRE
(необратима електропорация
-irreversible Elektroporation) и
криотерапия не трябва да се
прилагат за лечение на локално
напреднал рак на простатата.</string>
    <string name="column_1_title"><b><i>Номер</i></b></string>
    <string name="column_2_title"><b><i>Препоръка/твърдение</i></b></string>
    <string name="column_3_title"><b><i>Ниво на препоръка</i></b></string>
    <string name="column_4_title"><b><i>Ниво на доказателства</i></b></string>
    <string name="column_5_title"><b><i>Източник</i></b></string>
</resources>