<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".table_6_4_5_1"
    tools:showIn="@layout/activity_table_6_4_5_1">

    <ScrollView
        android:id="@+id/scrollView6451"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:shrinkColumns="0,1,2,3,4"
            android:stretchColumns="0,1,3"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="340dp"
            tools:visibility="visible">

            <TableRow
                android:id="@+id/Title_3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:stretchColumns="0">


                <TextView
                    android:id="@+id/title2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="5dp"
                    android:text="@string/title_6_4_5_1"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow

                android:id="@+id/firstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">


                <!-- first element of the row-->


                <TextView

                    android:id="@+id/column1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"

                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="@string/column_1_title"
                    android:textColor="#000"
                    android:textSize="12sp"


                    />

                <TextView

                    android:id="@+id/column2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".4"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="@string/column_2_title"
                    android:textColor="#000"
                    android:textSize="14sp"


                    />

                <TextView

                    android:id="@+id/column3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="@string/column_3_title"
                    android:textColor="#000"
                    android:textSize="12sp"


                    />

                <TextView

                    android:id="@+id/column4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="@string/column_4_title"
                    android:textColor="#000"
                    android:textSize="12sp"


                    />

                <TextView

                    android:id="@+id/column5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="@string/column_5_title"
                    android:textColor="#000"
                    android:textSize="12sp"


                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView

                    android:id="@+id/table_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="6.52"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="12sp"

                    />

                <TextView

                    android:id="@+id/table_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".4"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="@string/text6_52"
                    android:textColor="#000"
                    android:textSize="14sp"


                    />

                <TextView

                    android:id="@+id/table_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="A"
                    android:textAlignment="center"
                    android:textColor="#000"


                    android:textSize="12dp" />

                <TextView

                    android:id="@+id/table_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_span="1"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="1dip"
                    android:text="3"
                    android:textAlignment="center"
                    android:textColor="#000"


                    android:textSize="12sp" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_column="4"
                    android:layout_weight=".1"
                    android:layout_margin="1dp">
                <TextView
                    android:id="@+id/tableLink_6_52"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_span="1"
                    android:background="@color/cardview_light_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:padding="1dip"
                    android:text="[250, 251, 253, 257, 312, 313] "
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="12sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:background="@color/cardview_light_background" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/Line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:stretchColumns="0">

                <TextView
                    android:id="@+id/textViewLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:background="@color/cardview_light_background"
                    android:padding="5dp"
                    android:text="----------------------"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>